# TradeProject

./: CMakeLists.txt
database/: TradeProject.db
src/: CMakeLists.txt  Main.qml  main.cpp
src/Model/: CMakeLists.txt
src/Model/XLModel/: CMakeLists.txt  xlmodel.cpp  xlmodel.h
src/View/: CMakeLists.txt
src/View/MainWindow/: CMakeLists.txt
src/View/OptionWindow/: CMakeLists.txt  OptionWindow_V.qml  optionwindow_v.cpp  optionwindow_v.h
